// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth2faType: off 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 500px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
}

.c7 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 44px;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.2px;
  width: 100%;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c11 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  font-weight: 300;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c11:hover,
.c11:focus,
.c11:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c11::-ms-clear {
  display: none;
}

.c11::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c11:read-only {
  cursor: not-allowed;
}

.c11:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c6 {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.c8 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<div
  class="c0 c1"
  width="500"
>
  <div
    class="c2"
  >
    Sign in to Teleport
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <div
          class="c5 c6"
        >
          <form
            class="c7 c8"
            data-testid="userpassword"
          >
            <div
              class="c9"
            >
              <label
                class="c10"
              >
                Username
                <input
                  autocomplete="off"
                  class="c11"
                  inputmode="text"
                  placeholder="Username"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c9"
            >
              <div
                class="c12"
                width="100%"
              >
                <label
                  class="c10"
                >
                  Password
                  <input
                    autocomplete="off"
                    class="c11"
                    inputmode="text"
                    placeholder="Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
            </div>
            <button
              class="c13"
              fill="filled"
              type="submit"
              width="100%"
            >
              Sign In
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`auth2faType: optional rendering 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 500px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
}

.c7 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c14 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 0;
  margin-right: 16px;
  width: 100%;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 44px;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.2px;
  width: 100%;
}

.c17:focus-visible,
.teleport-button__force-focus-visible .c17 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c17:hover,
.teleport-button__force-hover .c17 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c17:active,
.teleport-button__force-active .c17 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c17:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c11 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  font-weight: 300;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c11:hover,
.c11:focus,
.c11:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c11::-ms-clear {
  display: none;
}

.c11::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c11:read-only {
  cursor: not-allowed;
}

.c11:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c15 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c6 {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.c8 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c13 {
  display: flex;
  align-items: flex-end;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c16 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c16 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c16 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255, 255, 255, 0.54);
}

.c16 .react-select__control:hover,
.c16 .react-select__control:focus,
.c16 .react-select__control:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c16 .react-select__control:hover .react-select__dropdown-indicator,
.c16 .react-select__control:focus .react-select__dropdown-indicator,
.c16 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c16 .react-select__control .react-select__indicator:hover,
.c16 .react-select__control .react-select__dropdown-indicator:hover,
.c16 .react-select__control .react-select__indicator:focus,
.c16 .react-select__control .react-select__dropdown-indicator:focus,
.c16 .react-select__control .react-select__indicator:active,
.c16 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c16 .react-select__control--is-focused {
  border-color: rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c16 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c16 .react-select__single-value {
  color: #FFFFFF;
}

.c16 .react-select__placeholder {
  color: rgba(255, 255, 255, 0.54);
}

.c16 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c16 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c16 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c16 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c16 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c16 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c16 .react-select__clear-indicator {
  color: rgba(255, 255, 255, 0.72);
}

.c16 .react-select__clear-indicator:hover,
.c16 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__clear-indicator:hover svg,
.c16 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c16 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.c16 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c16 .react-select__indicator-separator {
  display: none;
}

.c16 .react-select__loading-indicator {
  display: none;
}

.c16 .react-select__control--is-disabled {
  color: rgba(255, 255, 255, 0.36);
  border: 1px solid rgba(255, 255, 255, 0.36);
}

.c16 .react-select__control--is-disabled .react-select__single-value,
.c16 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255, 255, 255, 0.36);
}

.c16 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255, 255, 255, 0.36);
}

.c16 .react-select__input {
  color: #FFFFFF;
}

<div
  class="c0 c1"
  width="500"
>
  <div
    class="c2"
  >
    Sign in to Teleport
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <div
          class="c5 c6"
        >
          <form
            class="c7 c8"
            data-testid="userpassword"
          >
            <div
              class="c9"
            >
              <label
                class="c10"
              >
                Username
                <input
                  autocomplete="off"
                  class="c11"
                  inputmode="text"
                  placeholder="Username"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c9"
            >
              <div
                class="c12"
                width="100%"
              >
                <label
                  class="c10"
                >
                  Password
                  <input
                    autocomplete="off"
                    class="c11"
                    inputmode="text"
                    placeholder="Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
            </div>
            <div
              class="c9"
            >
              <div
                class="c3 c13"
              >
                <div
                  class="c14"
                  data-testid="mfa-select"
                  width="100%"
                >
                  <label
                    class="c15"
                    for="select"
                  >
                    Multi-factor Type
                  </label>
                  <div
                    class="c16"
                  >
                    <div
                      class="react-select-container css-2b097c-container"
                    >
                      <div
                        class="react-select__control css-yk16xz-control"
                      >
                        <div
                          class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                        >
                          <div
                            class="react-select__single-value css-1uccc91-singleValue"
                          >
                            Passkey or Security Key
                          </div>
                          <input
                            aria-autocomplete="list"
                            class="css-62g3xt-dummyInput"
                            id="select"
                            readonly=""
                            tabindex="0"
                            value=""
                          />
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-6q0nyr-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="c17"
              fill="filled"
              type="submit"
              width="100%"
            >
              Sign In
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`auth2faType: otp rendering 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 500px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
}

.c7 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c14 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 0;
  margin-right: 16px;
  width: 100%;
}

.c17 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 50%;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 44px;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.2px;
  width: 100%;
}

.c18:focus-visible,
.teleport-button__force-focus-visible .c18 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c18:hover,
.teleport-button__force-hover .c18 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c18:active,
.teleport-button__force-active .c18 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c18:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c11 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  font-weight: 300;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c11:hover,
.c11:focus,
.c11:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c11::-ms-clear {
  display: none;
}

.c11::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c11:read-only {
  cursor: not-allowed;
}

.c11:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c15 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c6 {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.c8 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c13 {
  display: flex;
  align-items: flex-end;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c16 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c16 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c16 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255, 255, 255, 0.54);
}

.c16 .react-select__control:hover,
.c16 .react-select__control:focus,
.c16 .react-select__control:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c16 .react-select__control:hover .react-select__dropdown-indicator,
.c16 .react-select__control:focus .react-select__dropdown-indicator,
.c16 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c16 .react-select__control .react-select__indicator:hover,
.c16 .react-select__control .react-select__dropdown-indicator:hover,
.c16 .react-select__control .react-select__indicator:focus,
.c16 .react-select__control .react-select__dropdown-indicator:focus,
.c16 .react-select__control .react-select__indicator:active,
.c16 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c16 .react-select__control--is-focused {
  border-color: rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c16 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c16 .react-select__single-value {
  color: #FFFFFF;
}

.c16 .react-select__placeholder {
  color: rgba(255, 255, 255, 0.54);
}

.c16 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c16 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c16 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c16 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c16 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c16 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c16 .react-select__clear-indicator {
  color: rgba(255, 255, 255, 0.72);
}

.c16 .react-select__clear-indicator:hover,
.c16 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__clear-indicator:hover svg,
.c16 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c16 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.c16 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c16 .react-select__indicator-separator {
  display: none;
}

.c16 .react-select__loading-indicator {
  display: none;
}

.c16 .react-select__control--is-disabled {
  color: rgba(255, 255, 255, 0.36);
  border: 1px solid rgba(255, 255, 255, 0.36);
}

.c16 .react-select__control--is-disabled .react-select__single-value,
.c16 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255, 255, 255, 0.36);
}

.c16 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255, 255, 255, 0.36);
}

.c16 .react-select__input {
  color: #FFFFFF;
}

<div
  class="c0 c1"
  width="500"
>
  <div
    class="c2"
  >
    Sign in to Teleport
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <div
          class="c5 c6"
        >
          <form
            class="c7 c8"
            data-testid="userpassword"
          >
            <div
              class="c9"
            >
              <label
                class="c10"
              >
                Username
                <input
                  autocomplete="off"
                  class="c11"
                  inputmode="text"
                  placeholder="Username"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c9"
            >
              <div
                class="c12"
                width="100%"
              >
                <label
                  class="c10"
                >
                  Password
                  <input
                    autocomplete="off"
                    class="c11"
                    inputmode="text"
                    placeholder="Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
            </div>
            <div
              class="c9"
            >
              <div
                class="c3 c13"
              >
                <div
                  class="c14"
                  data-testid="mfa-select"
                  width="100%"
                >
                  <label
                    class="c15"
                    for="select"
                  >
                    Multi-factor Type
                  </label>
                  <div
                    class="c16"
                  >
                    <div
                      class="react-select-container css-2b097c-container"
                    >
                      <div
                        class="react-select__control css-yk16xz-control"
                      >
                        <div
                          class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                        >
                          <div
                            class="react-select__single-value css-1uccc91-singleValue"
                          >
                            Authenticator App
                          </div>
                          <input
                            aria-autocomplete="list"
                            class="css-62g3xt-dummyInput"
                            id="select"
                            readonly=""
                            tabindex="0"
                            value=""
                          />
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-6q0nyr-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c17"
                  width="50%"
                >
                  <label
                    class="c10"
                  >
                    Authenticator Code
                    <input
                      autocomplete="one-time-code"
                      class="c11"
                      inputmode="numeric"
                      placeholder="123 456"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
              </div>
            </div>
            <button
              class="c18"
              fill="filled"
              type="submit"
              width="100%"
            >
              Sign In
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`auth2faType: webauthn rendering 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 500px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
}

.c7 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c14 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 0;
  margin-right: 16px;
  width: 100%;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 44px;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.2px;
  width: 100%;
}

.c17:focus-visible,
.teleport-button__force-focus-visible .c17 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c17:hover,
.teleport-button__force-hover .c17 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c17:active,
.teleport-button__force-active .c17 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c17:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c11 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  font-weight: 300;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c11:hover,
.c11:focus,
.c11:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c11::-ms-clear {
  display: none;
}

.c11::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c11:read-only {
  cursor: not-allowed;
}

.c11:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c15 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c6 {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.c8 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c13 {
  display: flex;
  align-items: flex-end;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c16 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c16 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c16 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255, 255, 255, 0.54);
}

.c16 .react-select__control:hover,
.c16 .react-select__control:focus,
.c16 .react-select__control:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c16 .react-select__control:hover .react-select__dropdown-indicator,
.c16 .react-select__control:focus .react-select__dropdown-indicator,
.c16 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c16 .react-select__control .react-select__indicator:hover,
.c16 .react-select__control .react-select__dropdown-indicator:hover,
.c16 .react-select__control .react-select__indicator:focus,
.c16 .react-select__control .react-select__dropdown-indicator:focus,
.c16 .react-select__control .react-select__indicator:active,
.c16 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c16 .react-select__control--is-focused {
  border-color: rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c16 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c16 .react-select__single-value {
  color: #FFFFFF;
}

.c16 .react-select__placeholder {
  color: rgba(255, 255, 255, 0.54);
}

.c16 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c16 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c16 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c16 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c16 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c16 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c16 .react-select__clear-indicator {
  color: rgba(255, 255, 255, 0.72);
}

.c16 .react-select__clear-indicator:hover,
.c16 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__clear-indicator:hover svg,
.c16 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c16 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.c16 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c16 .react-select__indicator-separator {
  display: none;
}

.c16 .react-select__loading-indicator {
  display: none;
}

.c16 .react-select__control--is-disabled {
  color: rgba(255, 255, 255, 0.36);
  border: 1px solid rgba(255, 255, 255, 0.36);
}

.c16 .react-select__control--is-disabled .react-select__single-value,
.c16 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255, 255, 255, 0.36);
}

.c16 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255, 255, 255, 0.36);
}

.c16 .react-select__input {
  color: #FFFFFF;
}

<div
  class="c0 c1"
  width="500"
>
  <div
    class="c2"
  >
    Sign in to Teleport
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <div
          class="c5 c6"
        >
          <form
            class="c7 c8"
            data-testid="userpassword"
          >
            <div
              class="c9"
            >
              <label
                class="c10"
              >
                Username
                <input
                  autocomplete="off"
                  class="c11"
                  inputmode="text"
                  placeholder="Username"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c9"
            >
              <div
                class="c12"
                width="100%"
              >
                <label
                  class="c10"
                >
                  Password
                  <input
                    autocomplete="off"
                    class="c11"
                    inputmode="text"
                    placeholder="Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
            </div>
            <div
              class="c9"
            >
              <div
                class="c3 c13"
              >
                <div
                  class="c14"
                  data-testid="mfa-select"
                  width="100%"
                >
                  <label
                    class="c15"
                    for="select"
                  >
                    Multi-factor Type
                  </label>
                  <div
                    class="c16"
                  >
                    <div
                      class="react-select-container css-2b097c-container"
                    >
                      <div
                        class="react-select__control css-yk16xz-control"
                      >
                        <div
                          class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                        >
                          <div
                            class="react-select__single-value css-1uccc91-singleValue"
                          >
                            Passkey or Security Key
                          </div>
                          <input
                            aria-autocomplete="list"
                            class="css-62g3xt-dummyInput"
                            id="select"
                            readonly=""
                            tabindex="0"
                            value=""
                          />
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-6q0nyr-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="c17"
              fill="filled"
              type="submit"
              width="100%"
            >
              Sign In
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cloud auth2faType: on rendering 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 500px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
}

.c7 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c14 {
  box-sizing: border-box;
  text-align: right;
}

.c17 {
  box-sizing: border-box;
  margin-bottom: 8px;
}

.c19 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 0;
  margin-right: 16px;
  width: 100%;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 44px;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.2px;
  width: 100%;
}

.c22:focus-visible,
.teleport-button__force-focus-visible .c22 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c22:hover,
.teleport-button__force-hover .c22 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c22:active,
.teleport-button__force-active .c22 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c22:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c15 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c15:hover,
.c15:focus {
  color: #33B1FF;
  box-shadow: none;
}

.c15:active {
  color: #66C5FF;
}

.c15:hover,
.c15:focus,
.c15:active {
  background: #222C59;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c11 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  font-weight: 300;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c11:hover,
.c11:focus,
.c11:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c11::-ms-clear {
  display: none;
}

.c11::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c11:read-only {
  cursor: not-allowed;
}

.c11:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c20 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c6 {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.c8 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c18 {
  display: flex;
  align-items: flex-end;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c21 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c21 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c21 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255, 255, 255, 0.54);
}

.c21 .react-select__control:hover,
.c21 .react-select__control:focus,
.c21 .react-select__control:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c21 .react-select__control:hover .react-select__dropdown-indicator,
.c21 .react-select__control:focus .react-select__dropdown-indicator,
.c21 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c21 .react-select__control .react-select__indicator:hover,
.c21 .react-select__control .react-select__dropdown-indicator:hover,
.c21 .react-select__control .react-select__indicator:focus,
.c21 .react-select__control .react-select__dropdown-indicator:focus,
.c21 .react-select__control .react-select__indicator:active,
.c21 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c21 .react-select__control--is-focused {
  border-color: rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c21 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c21 .react-select__single-value {
  color: #FFFFFF;
}

.c21 .react-select__placeholder {
  color: rgba(255, 255, 255, 0.54);
}

.c21 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c21 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c21 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c21 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c21 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c21 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c21 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c21 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c21 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c21 .react-select__clear-indicator {
  color: rgba(255, 255, 255, 0.72);
}

.c21 .react-select__clear-indicator:hover,
.c21 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c21 .react-select__clear-indicator:hover svg,
.c21 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c21 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.c21 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c21 .react-select__indicator-separator {
  display: none;
}

.c21 .react-select__loading-indicator {
  display: none;
}

.c21 .react-select__control--is-disabled {
  color: rgba(255, 255, 255, 0.36);
  border: 1px solid rgba(255, 255, 255, 0.36);
}

.c21 .react-select__control--is-disabled .react-select__single-value,
.c21 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255, 255, 255, 0.36);
}

.c21 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255, 255, 255, 0.36);
}

.c21 .react-select__input {
  color: #FFFFFF;
}

<div
  class="c0 c1"
  width="500"
>
  <div
    class="c2"
  >
    Sign in to Teleport
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <div
          class="c5 c6"
        >
          <form
            class="c7 c8"
            data-testid="userpassword"
          >
            <div
              class="c9"
            >
              <label
                class="c10"
              >
                Username
                <input
                  autocomplete="off"
                  class="c11"
                  inputmode="text"
                  placeholder="Username"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c12"
            >
              <div
                class="c13"
                width="100%"
              >
                <label
                  class="c10"
                >
                  Password
                  <input
                    autocomplete="off"
                    class="c11"
                    inputmode="text"
                    placeholder="Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <div
                class="c14"
              >
                <a
                  class="c15 c16"
                  fill="filled"
                  style="padding: 0px; min-height: 0;"
                >
                  Forgot Password?
                </a>
              </div>
            </div>
            <div
              class="c17"
            >
              <div
                class="c3 c18"
              >
                <div
                  class="c19"
                  data-testid="mfa-select"
                  width="100%"
                >
                  <label
                    class="c20"
                    for="select"
                  >
                    Multi-factor Type
                  </label>
                  <div
                    class="c21"
                  >
                    <div
                      class="react-select-container css-2b097c-container"
                    >
                      <div
                        class="react-select__control css-yk16xz-control"
                      >
                        <div
                          class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                        >
                          <div
                            class="react-select__single-value css-1uccc91-singleValue"
                          >
                            Passkey or Security Key
                          </div>
                          <input
                            aria-autocomplete="list"
                            class="css-62g3xt-dummyInput"
                            id="select"
                            readonly=""
                            tabindex="0"
                            value=""
                          />
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-6q0nyr-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <a
                class="c15 c16"
                fill="filled"
                style="padding: 0px; min-height: 0;"
              >
                Lost Two-Factor Device?
              </a>
            </div>
            <button
              class="c22"
              fill="filled"
              type="submit"
              width="100%"
            >
              Sign In
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`no login enabled 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin: 24px;
  background: #FF6257;
  color: #000000;
}

.c3 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 500px;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-left: 24px;
  margin-right: 24px;
}

p+.c5 {
  margin-top: 16px;
  margin-left: 24px;
  margin-right: 24px;
}

<div
  class="c0 c1"
  width="500"
>
  <div
    class="c2"
  >
    Sign in to Teleport
  </div>
  <div
    class="c3"
    kind="danger"
  >
    Login has not been enabled
  </div>
  <p
    class="c4 c5"
  >
    The ability to login has not been enabled. Please contact your system administrator for more information.
  </p>
</div>
`;

exports[`server error rendering 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin: 24px;
  background: #FF6257;
  color: #000000;
}

.c3 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 500px;
}

.c4 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
}

.c8 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 44px;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.2px;
  width: 100%;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c12 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  font-weight: 300;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c12:hover,
.c12:focus,
.c12:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c12::-ms-clear {
  display: none;
}

.c12::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c12:read-only {
  cursor: not-allowed;
}

.c12:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c11 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c7 {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.c9 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c5 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c5 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c5 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c5 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c5 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c5 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<div
  class="c0 c1"
  width="500"
>
  <div
    class="c2"
  >
    Sign in to Teleport
  </div>
  <div
    class="c3"
    kind="danger"
  >
    invalid credentials with looooooooooooooooooooooooooooooooong text
  </div>
  <div
    class="c4"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c5"
    >
      <div
        class="c4"
      >
        <div
          class="c6 c7"
        >
          <form
            class="c8 c9"
            data-testid="userpassword"
          >
            <div
              class="c10"
            >
              <label
                class="c11"
              >
                Username
                <input
                  autocomplete="off"
                  class="c12"
                  inputmode="text"
                  placeholder="Username"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c10"
            >
              <div
                class="c13"
                width="100%"
              >
                <label
                  class="c11"
                >
                  Password
                  <input
                    autocomplete="off"
                    class="c12"
                    inputmode="text"
                    placeholder="Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
            </div>
            <button
              class="c14"
              fill="filled"
              type="submit"
              width="100%"
            >
              Sign In
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sso list still renders when local auth is disabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 500px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 44px;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.2px;
  gap: 16px;
}

.c7:focus-visible,
.teleport-button__force-focus-visible .c7 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c7:hover,
.teleport-button__force-hover .c7 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c7:active,
.teleport-button__force-active .c7 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c7:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c8 {
  display: block;
  outline: none;
  width: 24px;
  height: 24px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c6 {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<div
  class="c0 c1"
  width="500"
>
  <div
    class="c2"
  >
    Sign in to Teleport
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c3 c6"
            data-testid="sso-list"
          >
            <button
              class="c7"
              fill="filled"
            >
              <img
                class="c8 res-icon-github"
                data-testid="icon"
                height="24px"
                src="file_stub"
                width="24px"
              />
              github
            </button>
            <button
              class="c7"
              fill="filled"
            >
              <img
                class="c8 res-icon-google"
                data-testid="icon"
                height="24px"
                src="file_stub"
                width="24px"
              />
              google
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sso providers rendering 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 500px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
}

.c10 {
  box-sizing: border-box;
  margin-top: 16px;
  margin-bottom: 16px;
  border-bottom: 1px solid;
  border-color: rgba(255, 255, 255, 0.54);
}

.c13 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 44px;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.2px;
  gap: 16px;
}

.c7:focus-visible,
.teleport-button__force-focus-visible .c7 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c7:hover,
.teleport-button__force-hover .c7 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c7:active,
.teleport-button__force-active .c7 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c7:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 44px;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.2px;
  width: 100%;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c9 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c8 {
  display: block;
  outline: none;
  width: 24px;
  height: 24px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c6 {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c12 {
  background: #222C59;
  display: flex;
  align-items: center;
  font-size: 10px;
  height: 32px;
  width: 32px;
  justify-content: center;
  position: absolute;
  z-index: 1;
  text-transform: uppercase;
}

<div
  class="c0 c1"
  width="500"
>
  <div
    class="c2"
  >
    Sign in to Teleport
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c3 c6"
            data-testid="sso-list"
          >
            <button
              class="c7"
              fill="filled"
            >
              <img
                class="c8 res-icon-github"
                data-testid="icon"
                height="24px"
                src="file_stub"
                width="24px"
              />
              GitHub
            </button>
            <button
              class="c7"
              fill="filled"
            >
              <img
                class="c8 res-icon-google"
                data-testid="icon"
                height="24px"
                src="file_stub"
                width="24px"
              />
              Google
            </button>
            <button
              class="c7"
              fill="filled"
            >
              <img
                class="c8 res-icon-atlassianbitbucket"
                data-testid="icon"
                height="24px"
                src="file_stub"
                width="24px"
              />
              Bitbucket
            </button>
            <button
              class="c7"
              fill="filled"
            >
              <span
                class="c9 icon icon-key"
                data-testid="icon"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M17.8125 7.125C17.8125 7.64277 17.3928 8.0625 16.875 8.0625C16.3572 8.0625 15.9375 7.64277 15.9375 7.125C15.9375 6.60723 16.3572 6.1875 16.875 6.1875C17.3928 6.1875 17.8125 6.60723 17.8125 7.125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.7546 1.53916C14.0354 1.36504 12.3087 1.78997 10.8666 2.74211C9.42448 3.69425 8.35541 5.11517 7.84013 6.76463C7.37496 8.2537 7.38688 9.84653 7.86716 11.3221L2.46967 16.7196C2.32902 16.8603 2.25 17.051 2.25 17.2499V20.9999C2.25 21.4142 2.58579 21.7499 3 21.7499H6.75C7.16421 21.7499 7.5 21.4142 7.5 20.9999V19.4999H9C9.41421 19.4999 9.75 19.1642 9.75 18.7499V17.2499H11.25C11.4489 17.2499 11.6397 17.1709 11.7803 17.0303L12.6778 16.1328C14.1534 16.6131 15.7462 16.625 17.2353 16.1598C18.8848 15.6445 20.3057 14.5755 21.2578 13.1334C22.21 11.6913 22.6349 9.96459 22.4608 8.24531C22.2867 6.52603 21.5242 4.91962 20.3023 3.69769C19.0803 2.47576 17.4739 1.71327 15.7546 1.53916ZM11.6931 3.99389C12.8467 3.23218 14.2281 2.89223 15.6035 3.03152C16.9789 3.17082 18.264 3.7808 19.2416 4.75835C20.2191 5.73589 20.8291 7.02102 20.9684 8.39645C21.1077 9.77187 20.7678 11.1532 20.0061 12.3069C19.2443 13.4606 18.1076 14.3158 16.788 14.728C15.4685 15.1403 14.047 15.0842 12.7641 14.5692C12.4853 14.4574 12.1667 14.5225 11.9544 14.7349L10.9393 15.7499H9C8.58579 15.7499 8.25 16.0857 8.25 16.4999V17.9999H6.75C6.33579 17.9999 6 18.3357 6 18.7499V20.2499H3.75V17.5606L9.26502 12.0456C9.47739 11.8332 9.54259 11.5146 9.43072 11.2359C8.91577 9.95291 8.85967 8.53148 9.27189 7.21191C9.68412 5.89234 10.5394 4.7556 11.6931 3.99389Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              Mission Control
            </button>
            <button
              class="c7"
              fill="filled"
            >
              <img
                class="c8 res-icon-okta"
                data-testid="icon"
                height="24px"
                src="file_stub"
                width="24px"
              />
              Okta
            </button>
            <button
              class="c7"
              fill="filled"
            >
              <img
                class="c8 res-icon-microsoft"
                data-testid="icon"
                height="24px"
                src="file_stub"
                width="24px"
              />
              Microsoft
            </button>
          </div>
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              Or
            </div>
          </div>
          <div
            class="c13"
          >
            <button
              class="c14"
              fill="filled"
            >
              Sign in with Username and Password
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
